# HPC03

./: README.md
CarpetaModeloCpp/: CMakeLists.txt  main.cpp
CarpetaModeloCpp/Cpp2/: regresionlineal.cpp
CarpetaModeloCpp/Cpph1/: extraccion.h
CarpetaModeloCpp/ModeloSklearn/: TercerParcialHPC.ipynb
Parcial1/: CMakeCache.txt  CMakeLists.txt  Makefile  Parcial1.cbp  cmake_install.cmake  main.cpp
Parcial1/.cmake/api/v1/reply/: cache-v2-861c4bd3ad9e943efa26.json  cmakeFiles-v1-5e2c1b4339f994dc0942.json  codemodel-v2-119d979e68b799736eba.json  index-2022-03-12T23-43-35-0068.json  target-Parcial1-Debug-960c6eaf7566359b980a.json
Parcial1/Debug/: CMakeCache.txt  Makefile  Parcial1.cbp  cmake_install.cmake
Parcial1/Debug/.cmake/api/v1/reply/: cache-v2-3697857ce3fa4117bf50.json  cmakeFiles-v1-4fd46b880ac3094f0677.json  codemodel-v2-0dac8d513b9868e71495.json  index-2022-03-12T13-49-02-0385.json
Parcial1/FUNCIONESMATRICIALES/: funciones.cpp  funciones.h
ParcialFinalHPC/Cpp1/: extraccion.cpp
ParcialFinalHPC/Cpph2/: regresionlineal.h
PrimerParcial/Debug/: CMakeCache.txt  Makefile  ParcialMatriz  ParcialMatriz.cbp  cmake_install.cmake
PrimerParcial/Debug/.cmake/api/v1/reply/: cache-v2-55fd2b4b1f1b082cd182.json  cmakeFiles-v1-5ce0962c27b0f31bbc3e.json  codemodel-v2-cfef62e33d877a0d9201.json  index-2022-03-09T10-23-04-0178.json  target-ParcialMatriz-Debug-060124eca5c906893e16.json
PrimerParcial/ParcialMatriz/: CMakeLists.txt
PrimerParcial/ParcialMatriz/FMATRIZ/: funciones.cpp  funciones.h
